# My-Project

./: README.md
Dashboard Monitoring/: main.py  requirements.txt
Dashboard Monitoring/Gempa Terkini/: README.md  pyproject.toml
Web Scrapping/: README.md  main.py
