[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cobaajadulu"
version = "0.1"
authors = [
  { name="Muchamad Faiz", email="muchamadfaiz@gmail.com" },
]
description = "A small example package"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Development Status :: 5 - Production/Stable",
]

[project.urls]
"Homepage" = "https://github.com/flitzcode/deteksigempa"
#"Bug Tracker" = "https://github.com/pypa/sampleproject/issues"